# bielGaragem

./: .editorconfig  .isort.cfg  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py
garagem/models/: __init__.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: Acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/views/: acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
